# rlpython

./: .gitignore  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
examples/: custom-command.py  environment.sh  local-embed.py  multi-session-socket-server.py  socket-server.py  unix-domain-socket-server.py
rlpython/: __init__.py  aliases.py  command_line.py  command_runtime.py  completion.py  embed.py  frontend.py  logging.py  protocol.py  python_runtime.py  repl.py  repl_client.py  repl_connection.py  repl_server.py  shell_runtime.py  templating.py
rlpython/commands/: aliases.py  edit.py  loops.py  tasks.py  threads.py  unix_environment.py  variables.py
rlpython/runtimes/: command_runtime.py  python_runtime.py  shell_runtime.py
rlpython/utils/: argument_parser.py  asyncio_utils.py  attribute_table.py  color.py  editor.py  gc_utils.py  strings.py  table.py  url.py
