[metadata]
description = GNU Readline based Python REPL
long_description = file: README.rst
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Debuggers
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
